Handle cases in wrapper